dataset1235/2025-2/610742602/users/1593150881/executions/906907063_4190502342.log
== SUBMISSION (2025-08-19 21:22:22)
-- CODE: 
amigos=4
total_da_conta= 180
valor_por_pessoa= total_da_conta/amigos
print("o valor que cada um tem que desembolsar é R$, 45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:20:33)
-- CODE: 
amigos=4
total_da_conta= 180
print (total_da_conta/amigos)
print("o valor que cada um tem que desembolsar é R$, 45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:28:45)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:22:21)
-- CODE: 
amigos=4
total_da_conta= 180
valor_por_pessoa= total_da_conta/amigos
print("o valor que cada um tem que desembolsar é R$, 45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:31:24)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:19:36)
-- CODE: 
amigos=4
total_da_conta: 180
total_da_conta / amigos
print("o valor que cada um tem que desembolsar é R$, 45")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_da_conta / amigos
    ^^^^^^^^^^^^^^
NameError: name 'total_da_conta' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_da_conta / amigos
    ^^^^^^^^^^^^^^
NameError: name 'total_da_conta' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:20:22)
-- CODE: 
amigos=4
total_da_conta= 180
print (total_da_conta / amigos)
print("o valor que cada um tem que desembolsar é R$, 45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:22:22)
-- CODE: 
amigos=4
total_da_conta= 180
valor_por_pessoa= total_da_conta/amigos
print("o valor que cada um tem que desembolsar é R$, 45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:22:31)
-- CODE: 
amigos=4
total_da_conta= 180
valor_por_pessoa= total_da_conta / amigos
print("o valor que cada um tem que desembolsar é R$, 45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:20:03)
-- CODE: 
amigos=4
total_da_conta= 180
total_da_conta / amigos
print("o valor que cada um tem que desembolsar é R$, 45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é R$, 45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
